--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio | Pavan</title>
 
-    <link rel="icon" type="png|image" href="/IMAGES/sailogo.png">
-    <link rel="stylesheet" href="C:\Users\123\Desktop\Ethical-Hacker-Portfolio-template-main - Copy\Ethical-Hacker-Portfolio-template-main\CSS\style.css">
+    <link rel="icon" type="png|image" href="sailogo.png">
+    <link rel="stylesheet" href="style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
 
@@ -16,7 +16,7 @@
 
     <canvas id="matrixCanvas"></canvas>
                                                         <!-- Matrix -->
-    <script src="C:\Users\123\Desktop\Ethical-Hacker-Portfolio-template-main - Copy\Ethical-Hacker-Portfolio-template-main\JAVASCRIPT\matrix.js"></script>
+    <script src="matrix.js"></script>
 
    <!-- <header class="header">
         <a href="#" class="logo">PAVAN V</a>
