--- a/index.html
+++ b/index.html
@@ -18,17 +18,6 @@
                                                         <!-- Matrix -->
     <script src="matrix.js"></script>
 
-   <!-- <header class="header">
-        <a href="#" class="logo">PAVAN V</a>
-
-    <!--  <nav class="navbar">
-            <a href="#home" style="--i:1;" class="active">Home</a>
-            <a href="#about" style="--i:2;">About</a>
-            <a href="#skill" style="--i:3;">Skills</a>
-            <a href="#project" style="--i:4;">Projects</a>
-            <a href="#contact" style="--i:5;">Contact</a>
-        </nav> -->
-    <!-- /header> -->
 
     <section id="home" class="home">
 
@@ -39,7 +28,7 @@
                 <script>
                    var typed = new Typed(".pro-text", {
                       strings: [
-                        "Netwok Enthusiast",
+                        "Networking Enthusiast",
                         "Linux Administrator",
                         "Cybersecurity Enthusiast"
                       ],
@@ -60,7 +49,7 @@
             </p>
 
             <div class="home-sci">
-                <!--<a href="https://github.com/SAI127001" target="_blank"><i class='bx bxl-github'></i></a>-->
+
                 <a href="https://www.linkedin.com/in/pavan-v-b602aa287/" target="_blank"><i class='bx bxl-linkedin'></i></a>
                 <a href="https://wa.me/8328209382" target="_blank"><i class='bx bxl-whatsapp'></i></a>
                 <a href="https://www.instagram.com/pavan.vootla/" target="_blank"><i class='bx bxl-instagram'></i></a>
@@ -73,7 +62,7 @@
                 <span></span>
                 <span></span>
                 <div class="image">
-                    <img src="C:\Users\123\Desktop\Ethical-Hacker-Portfolio-template-main - Copy\Ethical-Hacker-Portfolio-template-main\IMAGES\saianon.png" alt="">
+                    <img src="saianon.png" alt="">
                 </div>
             </div>
         </div>
